force-app/main/default/objects/Invoice__c/fields/IsAuthorisedRepPayer__c.field-meta.xml
<CustomField>
    <fullName>IsAuthorisedRepPayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAuthorisedRepPayer</label>
    <type>Checkbox</type>
</CustomField>