force-app/main/default/objects/Invoice__c/fields/IsClientPayer__c.field-meta.xml
<CustomField>
    <fullName>IsClientPayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClientPayer</label>
    <type>Checkbox</type>
</CustomField>