force-app/main/default/objects/Invoice__c/fields/IsCoClientPayer__c.field-meta.xml
<CustomField>
    <fullName>IsCoClientPayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCoClientPayer</label>
    <type>Checkbox</type>
</CustomField>