force-app/main/default/objects/Invoice__c/fields/IsInsurerPayer__c.field-meta.xml
<CustomField>
    <fullName>IsInsurerPayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInsurerPayer</label>
    <type>Checkbox</type>
</CustomField>