force-app/main/default/objects/Invoice__c/fields/PolicyEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyEffectiveDate__c</fullName>
    <formula>InsurancePolicy__r.EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>