force-app/main/default/objects/Invoice__c/fields/PremiumFundingStatus__c.field-meta.xml
<CustomField>
    <fullName>PremiumFundingStatus__c</fullName>
    <label>Premium Funding Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>