force-app/main/default/objects/Invoice__c/fields/TransactionItemAmount__c.field-meta.xml
<CustomField>
    <fullName>TransactionItemAmount__c</fullName>
    <label>Transaction Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>