force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BalanceAmount__c</columns>
    <columns>Payer__c</columns>
    <columns>PolicyNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>